Чтение и создание csv файлов в нужном формате

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 logging.config=src/main/resources/log4j.properties
+
+csvcontroller.orgUnitPath=/
+csvcontroller.adminEmail=max.is.god@icloud.com
+csvcontroller.adminNumber=+38095111844
+csvcontroller.changePasswordAtNextSignIn=0
+csvcontroller.inputFilePath=csvFiles/StudentInfo.csv
+csvcontroller.outputFilePath=csvFiles/Output.csv
+
+email.domen=@student.sumdu.edu.ua
